src/css/style.css
@import url('https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.1.0/github-markdown.css');
@import url('webbidings.css');
@font-face {
	font-family: 'Roboto Mono NF';
	src: url('../../res/fonts/RobotoMonoNF.ttf');
}
@font-face {
	font-family: 'Roboto Hieroglyphs';
	src: url('https://fonts.gstatic.com/s/roboto/v29/KFOmCnqEu92Fr1Mu72xKOzY.woff2') format('woff2');
	unicode-range: U+10996;
}
@font-face {
  font-family: 'Material Icons';
  src: url('../../res/fonts/MaterialIcons.woff2') format('woff2');
  font-style: normal;
  font-weight: 400;
  font-display: swap;
}

:root {
	--document-padding: 0;
	--min-padding: 4px;
	--standard-padding: 8px;
	--max-padding: 10px;
	--section-padding: var(--max-padding);

	--content-margin: clamp(0px, 10%, 25%);
	--content-padding: 10%;

	--card-width: clamp(80%, 30px, 30px);
	--propic-size: 68px;
	--propic-source: url('https://avatars.githubusercontent.com/u/71439748');

	--font: 'Segoe UI', sans-serif;
	--monospace-font: 'Roboto Mono NF';
	--title-font: var(--monospace-font); --title-size: 2.5rem; --title-weight: bold;
	--icon-font: 'Material Icons'; --icon-size: 1.2em; --icon-weight: regular; --icon-margin: 2px;
	--nav-link-font: var(--monospace-font); --nav-link-size: 1rem;
	--hieroglyphs: 'Roboto Hieroglyphs';

	--on-top: 10;
	--in-between: 5;
	--normal: 0;
	--behind-content: -5;

	--control-corner-radius: 3px;
	--section-corner-radius: 6px;
	--circle: 50%;
	--section-box-shadow: 0px 3px 6px;
	--border-bottom: 1px solid var(--border-muted);

	--min-opacity: 60%;
	--standard-opacity: 100%;
	--max-opacity: 80%;

	--animation: 250ms ease;
	--long-animation: 512ms ease;
	--longer-animation: 864ms ease;
}
@media only screen and (max-width: 800px) {
	:root {
		--content-padding: 25%;
	}
}
@media (prefers-reduced-motion) {
	:root {
		--animation: 0ms;
		--long-animation: 0ms;
		--longer-animation: 0ms;
	}
}

* {
	font-family: var(--font);

	color: var(--foreground);

	scroll-behavior: smooth;
	transition: var(--animation);
}

html, body {
	margin: var(--document-padding);
	padding: var(--document-padding);

	height: 100vh;
}

body {
	margin-top: var(--document-padding);
	margin-bottom: var(--document-padding);

	height: 100%;

	background: var(--background);
	box-shadow: var(--section-shadow);
}

body > div.content {
	margin-left: var(--content-margin);
	margin-right: var(--content-margin);

	padding-bottom: var(--content-padding);
}

:focus {
	outline: none;
	color: var(--primary);
}
:active, :visited {
	color: var(--primary);
}

header, footer {
	display: block;

	padding-top: var(--section-padding);
	padding-bottom: var(--section-padding);
	z-index: var(--on-top);
}

footer, aside {
	background: var(--background-20);
}

footer {
	position: fixed;
	bottom: 0;

	margin-top: var(--standard-padding);

	width: 100%;

	text-align: center;
}

:not(main) section.page:not(:target) {
	display: none;
}
main section.page, section.page:target {
	display: block !important;
}
section.page,
gallery li {
	block-size: 100%;
}
gallery {
	display: flex;
  flex-wrap: wrap;
}
gallery li {
	padding: var(--standard-padding);

	scroll-snap-align: center;
	scroll-snap-stop: always;
	
	list-style: none;
}

info {
	display: block;

	padding: var(--standard-padding);

	min-width: fit-content;

	border-radius: var(--section-corner-radius);
	background: var(--background-20);
}
info::before {
	content: attr(class) ' ';
}

a {
	color: var(--primary);
}

button {
	padding: var(--standard-padding);

	font-family: var(--monospace-font);
	text-transform: uppercase;

	border: none;
	outline: none;
	cursor: pointer;
	border-radius: var(--control-corner-radius);
	background: var(--background-20);
}
button:hover {
	background: var(--primary);
	color: var(--foreground);
}

nav {
	display: block;

	margin: var(--min-padding);
}
nav a {
	margin-left: var(--min-padding);
	margin-right: var(--min-padding);

	font-family: var(--monospace-font);
	text-decoration: none;

	color: var(--primary);
}
nav.primary, nav a:hover {
	color: var(--bright-purple);
}
nav a::before {
	content: attr(icon) ' ';
}
nav a::after {
	content: attr(title);
}

@media only screen and (max-width: 800px) {
	nav a:not(.primary)::after {
		display: none;
	}
}

nav.social a {
	color: var(--foreground-20);
}
nav.social a:hover {
	color: var(--foreground);
}
.sub-counter,
nav.social a[subs]::before {
	content: attr(subs);

	margin: var(--min-padding);
	padding: var(--min-padding);

	min-width: fit-content;

	border-radius: var(--control-corner-radius);
	background: var(--background-10);

	animation: sub-counter-load var(--longer-animation) forwards alternate;
	transition: var(--animation);
}
nav.social a[subs]:hover::before {
	content: '++';

	background: var(--primary);

	animation: sub-counter-content var(--longer-animation) forwards alternate;
	transition: var(--animation);
}
nav.social a[subs]:active::before {
	content: ':D';

	animation: sub-counter-added var(--longer-animation) forwards alternate;
}
@keyframes sub-counter-load {
	0% {
		content: '++';
	}
	50% {
		color: transparent;
	}
	100% {
		content: attr(subs);
	}
}
@keyframes sub-counter-content {
	0% {
		content: attr(subs);
	}
	50% {
		color: transparent;
	}
	100% {
		content: '++';
	}
}
@keyframes sub-counter-added {
	0% {
		content: '++';
	}
	50% {
		color: transparent;
	}
	100% {
		content: ':D';
	}
}

article,
info {
	max-width: 80ch;
}
article.post,
article.message {
	margin: var(--standard-padding);

	max-width: fit-content;
}

details > summary > * {
	display: inline;
}
details > summary {
	list-style: none;
}
details > summary::before {
	content: attr(icon);
}

ul > li {
	list-style: '├ ';
}
ul > li:last-of-type {
	list-style: '└ ';
}

.stuck {
	font-family: var(--monospace-font);

	color: var(--primary);
}
.stuck::after {
	content: ' \10996';

	font-family: var(--hieroglyphs);
}

icon,
nav a:not([subs])::before,
details > summary::before,
info::before {
	font-family: var(--icon-font);
	font-size: var(--icon-size);
	vertical-align: middle;
}

.propic {
	background-image: var(--propic-source);
	background-size: contain;
	background-repeat: no-repeat;
}

img.propic {
	margin-top: var(--min-padding);
	margin-bottom: var(--min-padding);

	width: var(--propic-size);
	height: var(--propic-size);

	border-radius: var(--circle);
}

icon.propic {
	width: var(--icon-size);
	height: var(--icon-size);

	border-radius: var(--circle);
}

